logs/dag_id=seed_postgres_db_dag/run_id=manual__2022-07-02T10:43:53.550138+00:00/task_id=create_users_table/attempt=1.log
[2022-07-02 10:43:54,282] {taskinstance.py:1160} INFO - Dependencies all met for <TaskInstance: seed_postgres_db_dag.create_users_table manual__2022-07-02T10:43:53.550138+00:00 [queued]>
[2022-07-02 10:43:54,296] {taskinstance.py:1160} INFO - Dependencies all met for <TaskInstance: seed_postgres_db_dag.create_users_table manual__2022-07-02T10:43:53.550138+00:00 [queued]>
[2022-07-02 10:43:54,297] {taskinstance.py:1357} INFO - 
--------------------------------------------------------------------------------
[2022-07-02 10:43:54,297] {taskinstance.py:1358} INFO - Starting attempt 1 of 1
[2022-07-02 10:43:54,297] {taskinstance.py:1359} INFO - 
--------------------------------------------------------------------------------
[2022-07-02 10:43:54,319] {taskinstance.py:1378} INFO - Executing <Task(PostgresOperator): create_users_table> on 2022-07-02 10:43:53.550138+00:00
[2022-07-02 10:43:54,324] {standard_task_runner.py:52} INFO - Started process 419 to run task
[2022-07-02 10:43:54,328] {standard_task_runner.py:79} INFO - Running: ['***', 'tasks', 'run', 'seed_postgres_db_dag', 'create_users_table', 'manual__2022-07-02T10:43:53.550138+00:00', '--job-id', '27', '--raw', '--subdir', 'DAGS_FOLDER/seed_postgres_db_dag.py', '--cfg-path', '/tmp/tmp4dqug3ah', '--error-file', '/tmp/tmppwu9tw0p']
[2022-07-02 10:43:54,328] {standard_task_runner.py:80} INFO - Job 27: Subtask create_users_table
[2022-07-02 10:43:54,387] {task_command.py:370} INFO - Running <TaskInstance: seed_postgres_db_dag.create_users_table manual__2022-07-02T10:43:53.550138+00:00 [running]> on host a5e5aec483b5
[2022-07-02 10:43:54,485] {taskinstance.py:1572} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=seed_postgres_db_dag
AIRFLOW_CTX_TASK_ID=create_users_table
AIRFLOW_CTX_EXECUTION_DATE=2022-07-02T10:43:53.550138+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2022-07-02T10:43:53.550138+00:00
[2022-07-02 10:43:54,496] {base.py:68} INFO - Using connection ID 'postgres_conn' for task execution.
[2022-07-02 10:43:54,501] {dbapi.py:208} INFO - Running statement: 
            CREATE TABLE IF NOT EXISTS flowers_table (
                id SERIAL PRIMARY KEY,
                sepal.length NUMBER NOT NULL,
                sepal.width NUMBER NOT NULL,
                petal.length NUMBER NOT NULL,
                petal.width NUMBER NOT NULL,
            );
            , parameters: None
[2022-07-02 10:43:54,501] {taskinstance.py:1890} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 92, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 188, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 212, in _run_command
    cur.execute(sql_statement)
  File "/home/airflow/.local/lib/python3.7/site-packages/psycopg2/extras.py", line 236, in execute
    return super().execute(query, vars)
psycopg2.errors.SyntaxError: syntax error at or near "."
LINE 4:                 sepal.length NUMBER NOT NULL,
                             ^

[2022-07-02 10:43:54,512] {taskinstance.py:1401} INFO - Marking task as FAILED. dag_id=seed_postgres_db_dag, task_id=create_users_table, execution_date=20220702T104353, start_date=20220702T104354, end_date=20220702T104354
[2022-07-02 10:43:54,532] {standard_task_runner.py:97} ERROR - Failed to execute job 27 for task create_users_table (syntax error at or near "."
LINE 4:                 sepal.length NUMBER NOT NULL,
                             ^
; 419)
[2022-07-02 10:43:54,580] {local_task_job.py:156} INFO - Task exited with return code 1
[2022-07-02 10:43:54,651] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
